--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.datasource.url=jdbc:postgresql://java_db:5432/postgres
+spring.datasource.url=jdbc:postgresql://192.168.1.9:5432/postgres
+# remplazar ip para ejecutar en local.
+# spring.datasource.url=jdbc:postgresql://IngreseSuIp:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+bootstrap.version=5.3.3
