--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "8080:8080"
     depends_on:
       - java_db
+    environment:
+      - java_db=jdbc:postgresql://java_db:5432/postgres
 
   java_db:
     container_name: java_db
@@ -16,6 +18,6 @@ services:
     ports:
       - "5432:5432"
     environment: 
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
