--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,10 @@
 	<name>crud</name>
 	<description>Crud project for Spring Boot</description>
 	<properties>
+		<maven.compiler.release>17</maven.compiler.release>
 		<java.version>21</java.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -49,9 +51,9 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
-			<version>5.3.2</version>
+			<version>5.3.3</version>
 		</dependency>
-
+		
 	</dependencies>
 	
 
